--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eyelush まつ毛美容液 | サンプルLP</title>
-  <link rel="stylesheet" href="css/style.css" />
+ <link rel="stylesheet" href="css/style.css?v=20251124" />
+
 </head>
 <body>
 
